# SW-transformation

./: README.md  pyproject.toml
SW/: SW.py  __init__.py
